Fri Sep 12 14:39:55 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gems/bundled_gems: Upgraded to test-unit-3.0.1 and minitest-5.4.1

Fri Sep 12 06:55:40 2014  Eric Wong  <e@80x24.org>

	* string.c (Init_frozen_strings): use st_init_table_with_size

Fri Sep 12 06:15:37 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (sym_find): remove Symbol.find because we have Symbol GC now.
	  https://bugs.ruby-lang.org/projects/ruby/wiki/DevelopersMeeting20140904Japan
	  If you still want this, request again on Redmine. [Feature #7854]
	  https://bugs.ruby-lang.org/issues/7854

	* ext/-test-/symbol/init.c (sym_find): moved from string.c for tests.

Fri Sep 12 04:24:03 2014  Eric Wong  <e@80x24.org>

	* insns.def (once): define and use fake RUNNING_THREAD_ONCE_DONE
	  pointer to indicate is->once.running_thread is done.

	* vm_core.h (iseq_inline_storage_entry): remove done field,
	  allowing the union to be reduced from 24=>16 bytes on 64-bit
	  [Feature #10187]

Thu Sep 11 20:10:00 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_thread_mark): use rb_gc_mark_values() to mark VM stack.

Thu Sep 11 19:50:57 2014  Koichi Sasada  <ko1@atdot.net>

	* vm.c (rb_vm_register_special_exception): make new function to
	  make and register special exceptions.

	* vm.c (rb_vm_mark): do not need to mark special exceptions
	  because they are registerd by rb_gc_register_mark_object().

	* eval.c (Init_eval): use rb_vm_register_special_exception().

	* gc.c (Init_GC): ditto.

	* proc.c (Init_Proc): ditto.

	* thread.c (Init_Thread): ditto.

Thu Sep 11 19:32:30 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_mark_values): added.
	  This function is similar to rb_gc_mark_locations(), but not
	  conservative.

	* internal.h: ditto.

	* vm.c (env_mark): use rb_gc_mark_values() because env values should
	  be Ruby VALUEs.

Thu Sep 11 19:16:39 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_ptr): rename to gc_mark_set.
